<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:weightSum="3">

            <TextView
                android:id="@+id/lblOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_weight="1"
                android:contentDescription="@string/amrobin"
                android:padding="3dp"
                android:text="@string/amrobin"
                android:textColor="@color/purple_700"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btn_amplay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_weight="1"
                android:text="@string/play" />

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="3"
                android:layout_weight="1"
                android:contentDescription="@string/amrobin"
                android:padding="8dp"
                app:srcCompat="@drawable/americanrobin" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:weightSum="3">

            <TextView
                android:id="@+id/lblTwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_weight="1"
                android:contentDescription="@string/barnswallow"
                android:padding="3dp"
                android:text="@string/barnswallow"
                android:textColor="@color/purple_700"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btn_bsplay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_weight="1"
                android:text="@string/play" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="3"
                android:layout_weight="1"
                android:contentDescription="@string/barnswallow"
                android:padding="8dp"
                app:srcCompat="@drawable/barnswallow" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:weightSum="3">

            <TextView
                android:id="@+id/lblThree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_weight="1"
                android:contentDescription="@string/hairywoodpecker"
                android:padding="3dp"
                android:text="@string/hairywoodpecker"
                android:textColor="@color/purple_700"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btn_hairywplay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_weight="1"
                android:text="@string/play" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="3"
                android:layout_weight="1"
                android:contentDescription="@string/hairywoodpecker"
                android:padding="8dp"
                app:srcCompat="@drawable/hairywoodpecker" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:weightSum="3">

            <TextView
                android:id="@+id/lblFour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_weight="1"
                android:contentDescription="@string/housewren"
                android:padding="3dp"
                android:text="@string/housewren"
                android:textColor="@color/purple_700"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btn_housewrenplay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_weight="1"
                android:text="@string/play" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="3"
                android:layout_weight="1"
                android:contentDescription="@string/housewren"
                android:padding="8dp"
                app:srcCompat="@drawable/housewren" />
        </TableRow>


    </TableLayout>

    <Button
        android:id="@+id/btn_credits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/credits"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>